fixes custom fields labels being unreadable

--- a/resources/assets/less/skins/skin-yellow-dark.less
+++ b/resources/assets/less/skins/skin-yellow-dark.less
@@ -78,7 +78,9 @@
 a.actions {
   color:#fff !important;
 }
-
+a:visited.label-default, a:link.label-default{
+  color:#444;
+}
 /**
 The dropdown is white, so use a darker color
  */
